<resources>
    <string name="app_name">Odonto</string>

    <string name="prompt_first_name">Primeiro Nome</string>
    <string name="prompt_last_name">Último Nome</string>
    <string name="prompt_username">Usuário</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirm">Confirmação de Senha</string>
    <string name="prompt_login">Usuário ou e-mail</string>
    <string name="prompt_card_whatafield">Whatafield</string>

    <string name="title_activity_main">Odonto</string>
    <string name="title_activity_card">Cartões</string>
    <string name="title_activity_create_card">Novo cartão</string>
    <string name="title_activity_card_details">Detalhes de cartão</string>
    <string name="title_activity_action">Ações</string>
    <string name="title_activity_action_details">Detalhes de ação</string>
    <string name="title_activity_login">Faça login</string>
    <string name="title_activity_register">Registre-se</string>

    <string name="title_home">Home</string>
    <string name="title_cards">Cartões</string>
    <string name="title_actions">Ações</string>
    <string name="title_attachments">Anexos</string>
    <string name="title_card">Cartão #%1$d</string>
    <string name="title_action">Ação #%1$d</string>
    <string name="title_attachment">Anexo #%1$d</string>
    <string name="title_archive">Arquivo</string>
    <string name="title_profile">Perfil</string>
    <string name="title_view">Ver</string>
    <string name="title_audit_data_created">Criado por &lt;b>%1$s&lt;/b> em &lt;b>%2$s&lt;/b></string>
    <string name="title_audit_data_modified">Última modificação por &lt;b>%1$s&lt;/b> em &lt;b>%2$s&lt;/b></string>

    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Registre-se</string>
    <string name="action_register_short">Registre-se</string>

    <string name="action_save">Salvar</string>

    <string name="action_archive_card">Arquivar</string>
    <string name="action_recover_card">Desarquivar</string>

    <string name="error_already_in_use_email">Outra pessoa já está usando este e-mail</string>
    <string name="error_already_in_use_username">Outra pessoa já está usando este usuário</string>
    <string name="error_invalid_email">Endereço de e-mail inválido</string>
    <string name="error_invalid_username">Usuário deve comenter somente caracteres alfanuméricos caixa baixa sem espaços</string>
    <string name="error_invalid_password">Senha deve conter no mínimo 4 caracteres alfanuméricos sem espaços</string>
    <string name="error_invalid_login">Login deve conter somente caracteres caixa baixa sem espaços</string>
    <string name="error_incorrect_password_confirm">A confirmação de senha deve ser igual a senha</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="error_bad_credentials">Credenciais incorretas</string>
    <string name="error_create_card">Ocorreu um erro ao criar um novo cartão</string>
    <string name="error_no_connection">Sem conexão</string>
    <string name="error_api_response">Ocorreu um erro com o retorno da API</string>
    <string name="error_account_not_activated">Sua conta ainda não foi ativada. Por favor, confirme o seu email</string>

    <string name="success_create_account">Sua conta foi criada. For favor, verifique seu e-mail (%1$s) para ativa-la</string>
    <string name="success_logged_out">Você foi desconectado</string>
    <string name="success_created_card">Novo cartão criado</string>
    <string name="success_archived_card">Cartão arquivado</string>
    <string name="success_recovered_card">Cartão desarquivado</string>

    <string name="empty_view">Nada para mostrar</string>
    <string name="title_activity_card_detail2">CardDetailActivity2</string>

</resources>
